[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/screens/shop_screen.gd" id="1"]
[ext_resource type="Theme" path="res://ui/theme/game_theme.tres" id="2"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.035, 0.035, 0.043, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
text = "< Back"

[node name="HeaderSpacer" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 24
text = "Shop"
horizontal_alignment = 1

[node name="HeaderSpacer2" type="Control" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BitsLabel" type="Label" parent="MarginContainer/VBox/HeaderBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0 Bits"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="TabRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuyTab" type="Button" parent="MarginContainer/VBox/TabRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
toggle_mode = true
button_pressed = true
text = "Buy"

[node name="SellTab" type="Button" parent="MarginContainer/VBox/TabRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 36)
toggle_mode = true
text = "Sell"

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="ItemListPanel" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ItemListScroll" type="ScrollContainer" parent="MarginContainer/VBox/ContentHBox/ItemListPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/ItemListPanel/ItemListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="DetailPanel" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 20
text = ""

[node name="ItemDescLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443, 0.443, 0.478, 1)
theme_override_font_sizes/font_size = 14
autowrap_mode = 2
text = ""

[node name="PriceLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = ""

[node name="QuantitySpacer" type="Control" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="QuantityRow" type="HBoxContainer" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel/QuantityRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Qty:"

[node name="QuantityMinus" type="Button" parent="MarginContainer/VBox/ContentHBox/DetailPanel/QuantityRow"]
layout_mode = 2
custom_minimum_size = Vector2(36, 36)
text = "-"

[node name="QuantityValue" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel/QuantityRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
text = "1"

[node name="QuantityPlus" type="Button" parent="MarginContainer/VBox/ContentHBox/DetailPanel/QuantityRow"]
layout_mode = 2
custom_minimum_size = Vector2(36, 36)
text = "+"

[node name="TotalLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/DetailPanel/QuantityRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""

[node name="ActionButton" type="Button" parent="MarginContainer/VBox/ContentHBox/DetailPanel"]
layout_mode = 2
custom_minimum_size = Vector2(160, 40)
text = "Buy"
